# bevy_game

./: Cargo.toml
.cargo/: config.toml
assets/: map.ldtk
src/: level.rs  main.rs  math.rs  platformer.rs  player.rs
