[package]
name = "my_bevy_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.1", features = ["dynamic"] }
bevy-inspector-egui = "0.8.2"
bevy_prototype_debug_lines = "0.6.1"
bevy_rapier2d = { version = "0.12.1", features = ["render"] }
ldtk_rust = "0.5.2"
serde = "1.0.136"
